Client version updated for nlpcraft 0.7.2.